--- a/sdp/index.html
+++ b/sdp/index.html
@@ -19,14 +19,14 @@
                 <div class="wrapper">
                     <i id="left" class="fa-solid fa-angle-left"></i>
                     <div class="carousel">
-                        <a href="/drolex1/index.html" target="_blank">
-                            <img src="/images/rolex1.png" alt="rolex1">
+                        <a href="../drolex1/index.html" target="_blank">
+                            <img src="../images/rolex1.png" alt="rolex1">
                         </a>
-                        <img src="/images/rolex2.png" alt="rolex2">
-                        <img src="/images/rolex3.png" alt="rolex3">
-                        <img src="/images/rolex1.png" alt="rolex1">
-                        <img src="/images/rolex2.png" alt="rolex2">
-                        <img src="/images/rolex3.png" alt="rolex3">
+                        <img src="../images/rolex2.png" alt="rolex2">
+                        <img src="../images/rolex3.png" alt="rolex3">
+                        <img src="../images/rolex1.png" alt="rolex1">
+                        <img src="../images/rolex2.png" alt="rolex2">
+                        <img src="..../images/rolex3.png" alt="rolex3">
                     </div>
                     <i id="right" class="fa-solid fa-angle-right"></i>
                 </div>
@@ -40,12 +40,12 @@
                 <div class="wrapper2">
                     <i id="left" class="fa-solid fa-angle-left"></i>
                     <div class="carousel2">
-                        <img src="/images/ap1.png" alt="ap1">
-                        <img src="/images/ap2.png" alt="ap2">
-                        <img src="/images/ap3.png" alt="ap3">
-                        <img src="/images/ap1.png" alt="ap1">
-                        <img src="/images/ap2.png" alt="ap2">
-                        <img src="/images/ap3.png" alt="ap3">
+                        <img src="../images/ap1.png" alt="ap1">
+                        <img src="../images/ap2.png" alt="ap2">
+                        <img src="../images/ap3.png" alt="ap3">
+                        <img src="../images/ap1.png" alt="ap1">
+                        <img src="../images/ap2.png" alt="ap2">
+                        <img src="../images/ap3.png" alt="ap3">
                     </div>
                     <i id="right" class="fa-solid fa-angle-right"></i>
                 </div>
@@ -59,12 +59,12 @@
                 <div class="wrapper3">
                     <i id="left" class="fa-solid fa-angle-left"></i>
                     <div class="carousel3">
-                        <img src="/images/omega1.png" alt="omega1">
-                        <img src="/images/omega2.png" alt="omega2">
-                        <img src="/images/omega3.png" alt="omega3">
-                        <img src="/images/omega1.png" alt="omega1">
-                        <img src="/images/omega2.png" alt="omega2">
-                        <img src="/images/omega3.png" alt="omega3">
+                        <img src="../images/omega1.png" alt="omega1">
+                        <img src="../images/omega2.png" alt="omega2">
+                        <img src="../images/omega3.png" alt="omega3">
+                        <img src="../images/omega1.png" alt="omega1">
+                        <img src="../images/omega2.png" alt="omega2">
+                        <img src="../images/omega3.png" alt="omega3">
                     </div>
                     <i id="right" class="fa-solid fa-angle-right"></i>
                 </div>
@@ -78,12 +78,12 @@
                 <div class="wrapper4">
                     <i id="left" class="fa-solid fa-angle-left"></i>
                     <div class="carousel4">
-                        <img src="/images/pp1.png" alt="omega1">
-                        <img src="/images/pp2.png" alt="omega2">
-                        <img src="/images/pp3.png" alt="omega3">
-                        <img src="/images/pp1.png" alt="omega1">
-                        <img src="/images/pp2.png" alt="omega2">
-                        <img src="/images/pp3.png" alt="omega3">
+                        <img src="../images/pp1.png" alt="omega1">
+                        <img src="../images/pp2.png" alt="omega2">
+                        <img src="../images/pp3.png" alt="omega3">
+                        <img src="../images/pp1.png" alt="omega1">
+                        <img src="../images/pp2.png" alt="omega2">
+                        <img src="../images/pp3.png" alt="omega3">
                     </div>
                     <i id="right" class="fa-solid fa-angle-right"></i>
                 </div>
